--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
     "@nestjs/mongoose": "^9.0.1",
     "@nestjs/platform-express": "^8.0.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.13.2",
     "dcryptjs": "^1.0.5",
     "mongoose": "^6.0.13",
     "reflect-metadata": "^0.1.13",
